--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="theme-color" content="#74b9ff">
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./manifest.json">
 
     <!-- Icons -->
-    <link rel="icon" href="src/icons/icon-72x72.png" type="image/png">
-    <link rel="apple-touch-icon" href="src/icons/icon-192x192.png">
+    <link rel="icon" href="./src/icons/icon-72x72.png" type="image/png">
+    <link rel="apple-touch-icon" href="./src/icons/icon-192x192.png">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
